# xqilla

./: CMakeLists.txt  xqilla-dom3.hpp  xqilla-simple.hpp
ast/: ASTNode.hpp  ASTNodeImpl.cpp  ASTNodeImpl.hpp  ContextTuple.cpp  ContextTuple.hpp  ConvertFunctionArg.cpp  ConvertFunctionArg.hpp  CountTuple.cpp  CountTuple.hpp  ForTuple.cpp  ForTuple.hpp  LetTuple.cpp  LetTuple.hpp  LocationInfo.hpp  NumericFunction.cpp  NumericFunction.hpp  OrderByTuple.cpp  OrderByTuple.hpp  StaticAnalysis.cpp  StaticAnalysis.hpp  StaticType.cpp  StaticType.hpp  TupleNode.cpp  TupleNode.hpp  WhereTuple.cpp  WhereTuple.hpp  XQAnalyzeString.cpp  XQAnalyzeString.hpp  XQApplyTemplates.cpp  XQApplyTemplates.hpp  XQAtomize.cpp  XQAtomize.hpp  XQAttributeConstructor.cpp  XQAttributeConstructor.hpp  XQCallTemplate.cpp  XQCallTemplate.hpp  XQCastAs.cpp  XQCastAs.hpp  XQCastableAs.cpp  XQCastableAs.hpp  (+74 more)
axis/: NodeTest.cpp  NodeTest.hpp
config/: xqilla_config.h
context/: Collation.hpp  ContextHelpers.hpp  DynamicContext.hpp  ExternalFunctionResolver.hpp  ItemFactory.hpp  MessageListener.hpp  ModuleResolver.hpp  RegexGroupStore.hpp  Scope.hpp  StaticContext.hpp  URIResolver.hpp  UpdateFactory.cpp  UpdateFactory.hpp  VarHashEntry.hpp  VariableStore.hpp  VariableTypeStore.hpp
debug/: ASTDebugHook.cpp  ASTDebugHook.hpp  DebugHookDecorator.cpp  DebugHookDecorator.hpp  DebugListener.hpp  InputParser.cpp  InputParser.hpp  InteractiveDebugger.cpp  InteractiveDebugger.hpp  StackFrame.cpp  StackFrame.hpp  TupleDebugHook.cpp  TupleDebugHook.hpp
dom-api/: XPath2NodeSerializer.cpp  XPath2Result.hpp  (+5 more)
(+641 files in other folders)
